# mt

./: .gitmodules  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  RELEASING.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  homebrew.yml  release-please.yml  release.yml  winget.yml
docs/: manual-testing.md
docs/superpowers/plans/: 2026-04-18-meshtastic-gui-mvp.md
docs/superpowers/specs/: 2026-04-18-meshtastic-gui-mvp-design.md
src/: error.rs  lib.rs  main.rs
src/codec/: error.rs  frame.rs
src/domain/: channel.rs  channel_url.rs  config.rs  config_export.rs  ids.rs  message.rs  mod.rs  node.rs  profile.rs  session.rs  snapshot.rs  stats.rs  traceroute.rs
src/persist/: history.rs  messages.rs  mod.rs  profiles.rs
src/proto/: mod.rs  port.rs
src/session/: commands.rs  handshake.rs  mod.rs
src/transport/: ble.rs  error.rs  mock.rs  mod.rs  serial.rs  tcp.rs
src/ui/: alerts.rs  channels.rs  chat.rs  connect.rs  details.rs  firmware.rs  fonts.rs  inspector.rs  logs.rs  map_tiles.rs  mod.rs  nodes.rs  reconnect.rs  remote_admin.rs  scan.rs  settings.rs  status.rs  topology.rs
tests/: codec_frame.rs  codec_stream.rs  domain_channel_url.rs  domain_config_export.rs  domain_ids.rs  domain_session.rs  domain_values.rs  persist_history.rs  persist_messages.rs  persist_profiles.rs  proto_port.rs  session_handshake.rs  session_run.rs  transport_mock.rs  transport_tcp.rs  ui_firmware.rs
