[package]
name = "mt"
version = "0.2.2"
edition = "2024"
publish = false
description = "Native desktop client for Meshtastic radios (BLE / Serial / TCP)"
license = "Apache-2.0 OR MIT"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = "line-tables-only"

[lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
integer_division = "deny"
arithmetic_side_effects = "warn"
float_cmp = "deny"
string_slice = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
module_inception = "allow"
missing_const_for_fn = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
multiple_crate_versions = "allow"
negative_feature_names = "allow"
cargo_common_metadata = "allow"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mt"
path = "src/main.rs"

[[bin]]
name = "mt-cli"
path = "src/bin/mt-cli.rs"

[dependencies]
base64 = "0.22"
bytes = "1"
directories = "6"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = "0.29"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
lru = "0.17"
notify-rust = "4"
parking_lot = "0.12"
prost = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkers = "0.31"

btleplug = "0.12"
tokio-serial = "5"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "test-util"] }
